# FastAPI_Workout_Tracker

./: .env.example  README.md  pyproject.toml
fastwebstore/: database.py  main.py  models.py  route_handler.py  schemas.py
fastwebstore/auth/: views.py
fastwebstore/users/: models.py  schemas.py  services.py  views.py
projectnamehere/: main.py  models.py
tests/homepage/: test_get.py
workout_tracker/: main.py  models.py  route_handler.py
workout_tracker/auth/: views.py
workout_tracker/users/: models.py  schemas.py  services.py  views.py
