[tool.poetry]
name = "workout_tracker"
version = "0.1.0"
description = ""
authors = ["Heston Friedland"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.6"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
